[package]
name = "sol-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.8.5"
solana-program = "1.8.5"
solana-sdk = "1.8.5"
solana-transaction-status = "1.8.5"

serde = "*"
serde_json = "1.0"

rayon = "1.5"